@@ -1,5 +1,8 @@
 Overview of changes in xtickertape-2.0
 
+* Added a way to set the idle-period to test the connection after some
+  period of inactivity.
+
 * The Send button is now disabled until there is at least one
   character in the `Text' field.
 
